# MT3620_Grove_Shield

MT3620_Grove_Shield_Library/HAL/: GroveI2C.c  GroveI2C.h
MT3620_Grove_Shield_Library/Sensors/: GroveTempHumiBaroBME280.c  GroveTempHumiBaroBME280.h
Samples/Barometer_BME280/: CMakeLists.txt  app_manifest.json  main.c
Samples/SensorAzureIoTSample/: CMakeLists.txt  README.md  app_manifest.json  main.c
Samples/SensorLiefDeviceAzureIoTSample/: CMakeLists.txt  app_manifest.json  liefdevice.c  liefdevice.h  main.c
Samples/Temp_and_Humidity_SHT31/: main.c
Tools/WpfAppEdgeControl/: WpfAppEdgeControl.sln
Tools/WpfAppEdgeControl/WpfAppEdgeControl/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfAppEdgeControl.csproj  packages.config
Tools/WpfAppEdgeControl/WpfAppEdgeControl/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
